@@ -2125,5 +2125,7 @@ $_LANG['VoIP'] = 'VoIP';
 $_LANG['Voip account $0 was deleted'] = 'Konto VoIP $0 zostało usunięte';
 $_LANG['Voip account owner is not connected!'] = 'Właściciel konta VoIP nie jest podłaczony!';
 $_LANG['Selected numbering plan doesn\'t match customer\'s division!'] = 'Wybrany plan numeracyjny nie należy do firmy klienta!';
+$_LANG['with document'] = 'z dokumentem';
+$_LANG['without document'] = 'bez dokumentu';
 
 ?>
