@@ -1,6 +1,7 @@
 {include file="header.html"}
 <!--// $Id$ //-->
 <H1>{$layout.pagetitle}</H1>
+{include file="calendar_js.html"}
 {literal}
 <SCRIPT type="text/javascript">
 	<!--
@@ -118,16 +119,16 @@
 		<TD width="91%" class="fbt">
 			<B>{t}Description:{/t}</B>
 		</TD>
-		<TD width="1%" CLASS="frightu">
-			&nbsp;
+		<TD width="1%" CLASS="frightu">&nbsp;
+			
 		</TD>
 	</TR>
 	<TR class="DARK">
     		<TD class="fall" colspan="10">
 	                <B>{t}Filter:{/t} </B>
-				<INPUT type="text" name="search" value="{$listdata.search}" {tip text="Enter value of searching data and select category"}>&nbsp;
-				<SELECT size="1" name="cat">
-					<OPTION value=""{if $listdata.cat eq ""} SELECTED{/if}>{t}- select filter category -{/t}</OPTION>
+				<INPUT type="text" name="search" value="{$listdata.search}" size="15" {tip text="Enter value of searching data and select category"}>
+				<SELECT size="1" name="cat" style="width: 150px">
+					<OPTION value=""{if $listdata.cat eq ""} SELECTED{/if}>{t}- select category -{/t}</OPTION>
 					<OPTION value="cdate"{if $listdata.cat eq "cdate"} SELECTED{/if}>{t}date (YYYY/MM/DD){/t}</OPTION>
 					<OPTION value="number"{if $listdata.cat eq "number"} SELECTED{/if}>{t}document number{/t}</OPTION>
 					<OPTION value="value"{if $listdata.cat eq "value"} SELECTED{/if}>{t}value{/t}</OPTION>
@@ -135,6 +136,8 @@
 					<OPTION value="customerid"{if $listdata.cat eq "customerid"} SELECTED{/if}>{t}customer ID{/t}</OPTION>
 					<OPTION value="ten"{if $listdata.cat eq "ten"} SELECTED{/if}>{t}TEN{/t}</OPTION>
 					<OPTION value="address"{if $listdata.cat eq "address"} SELECTED{/if}>{t}address{/t}</OPTION>
+					<OPTION value="documented"{if $listdata.cat eq "documented"} SELECTED{/if}>{t}with document{/t}</OPTION>
+					<OPTION value="notdocumented"{if $listdata.cat eq "notdocumented"} SELECTED{/if}>{t}without document{/t}</OPTION>
 				</SELECT>&nbsp;
 				{t}Group:{/t}
 				<SELECT size="1" name="group">
@@ -145,7 +148,11 @@
 				</SELECT>
 				<NOBR>
 				<INPUT type="checkbox" name="groupexclude" {if $listdata.groupexclude} CHECKED{/if}><A HREF="javascript:setCheckbox('groupexclude')">{t}exclude group{/t}</a>
-				<A href="javascript: filter();">&raquo;&raquo;&raquo;</A>
+				</NOBR>
+				<NOBR>
+            			{t}From:{/t}&nbsp;<INPUT TYPE="text" NAME="from" SIZE="10" MAXSIZE="10" value="{if $listdata.from > 0}{$listdata.from|date_format:"%Y/%m/%d"}{/if}" OnClick="javascript:cal1.popup();" {tip text="Enter date in YYYY/MM/DD format (empty field means no limit) or click to choose it from calendar"}>
+				{t}To:{/t}&nbsp;<INPUT TYPE="text" NAME="to" SIZE="10" MAXSIZE="10" value="{if $listdata.to > 0}{$listdata.to|date_format:"%Y/%m/%d"}{/if}" OnClick="javascript:cal2.popup();"  {tip text="Enter date in YYYY/MM/DD format (empty field means no limit) or click to choose it from calendar"}>&nbsp;
+				<A href="javascript: filter();">&raquo;&raquo;&raquo;</A><BR>
 				</NOBR>
 		</TD>
 	</TR>		
@@ -255,10 +262,18 @@
 		<TD nowrap class="fbt" align="left">
 			<B>{$listdata.totalval|money_format}</B>
 		</TD>
-		<TD class="frightu">
-			&nbsp;
+		<TD class="frightu">&nbsp;
+			
 		</TD>
 	</TR>
 </TABLE>
 </FORM>
+<SCRIPT type="text/javascript">
+<!--
+var cal1 = new calendar(document.page.elements['from']);
+cal1.time_comp = false;
+var cal2 = new calendar(document.page.elements['to']);
+cal2.time_comp = false;
+//-->
+</SCRIPT>
 {include file="footer.html"}
